@startuml DataAccessLayer
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #E8F8E8
skinparam classBorderColor #00AA00
skinparam arrowColor #00AA00

package "DATA ACCESS LAYER" {
    interface ICountryRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Country): Task
        + UpdateAsync(Country): Task
        + DeleteAsync(int): Task
    }
    
    interface IChampionshipRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Championship): Task
        + UpdateAsync(Championship): Task
        + DeleteAsync(int): Task
    }
    
    interface IMatchRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Match): Task
        + UpdateAsync(Match): Task
        + DeleteAsync(int): Task
    }
    
    interface IPersonRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Person): Task
        + UpdateAsync(Person): Task
        + DeleteAsync(int): Task
    }
    
    interface IGoalRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Goal): Task
        + UpdateAsync(Goal): Task
        + DeleteAsync(int): Task
    }
    
    interface IGoalTypeRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(GoalType): Task
        + UpdateAsync(GoalType): Task
        + DeleteAsync(int): Task
    }
    
    interface IPlayerSquadRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(PlayerSquad): Task
        + UpdateAsync(PlayerSquad): Task
        + DeleteAsync(int): Task
    }
    
    interface ICoachMatchRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(CoachMatch): Task
        + UpdateAsync(CoachMatch): Task
        + DeleteAsync(int): Task
    }
    
    class CountryRepository
    class ChampionshipRepository
    class MatchRepository
    class PersonRepository
    class GoalRepository
    class GoalTypeRepository
    class PlayerSquadRepository
    class CoachMatchRepository
}

ICountryRepository <|.. CountryRepository
IChampionshipRepository <|.. ChampionshipRepository
IMatchRepository <|.. MatchRepository
IPersonRepository <|.. PersonRepository
IGoalRepository <|.. GoalRepository
IGoalTypeRepository <|.. GoalTypeRepository
IPlayerSquadRepository <|.. PlayerSquadRepository
ICoachMatchRepository <|.. CoachMatchRepository

@enduml
